tests/health/gold/sdk/examples__ble__heart_rate.toit.gold
examples/ble/heart_rate.toit:38:7: error: Argument mismatch for 'AdvertisementData'
Required named argument '--connectable' not provided
      AdvertisementData --name="Toit heart rate demo"
      ^~~~~~~~~~~~~~~~~
<sdk>/ble/remote.toit:116:15: warning: Class 'AdvertisementData' is deprecated. Use 'Advertisement' instead
              AdvertisementData
              ^~~~~~~~~~~~~~~~~
<sdk>/ble/remote.toit:133:32: warning: Class 'AdvertisementData' is deprecated. Use 'Advertisement' instead
              AdvertisementData.raw_ next[2] --connectable=next[3]
                               ^~~~~
